fix issue with mobile nav behind slider

--- a/source/stylesheets/magnific-popup.css
+++ b/source/stylesheets/magnific-popup.css
@@ -16,7 +16,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1043;
   position: fixed;
   outline: none !important;
   -webkit-backface-visibility: hidden; }
