--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -23,6 +23,7 @@
   .navigation-wrapper {
     @include clearfix;
     position: relative;
+    z-index: 9999;
   }
 
   .logo {
